@@ -5,6 +5,9 @@ Changelog for HTML-Tree
     [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
     * as_HTML no longer indents <textarea> (Tomohiro Hosaka) (RT #70385)
 
+    [FIXES]
+    * as_trimmed_text did not accept '0' for extra_chars
+
     [DOCUMENTATION]
     * Explain that as_text never adds whitespace (RT #66498)
     * Explain what extra_chars can contain for as_trimmed_text.
